Attempting fix for Windows "Unable to determine GraphicsConfiguration"